--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -1,3 +1,84 @@
 html {
     overflow: hidden !important;
 }
+
+#app {
+    // stepper
+
+    .v-stepper {
+        border-radius: 0;
+    }
+
+    .v-stepper__step {
+        padding: 0 20px;
+    }
+
+    .v-stepper__step--active {
+        border-bottom: solid 2px var(--v-primary-base);
+    }
+
+    .v-stepper__step__step {
+        display: none;
+    }
+
+    .v-stepper__header {
+        justify-content: flex-start;
+        height: 40px;
+        background-color: var(--v-controls-base);
+    }
+
+    .v-stepper__label {
+        display: flex !important;
+    }
+
+    .v-stepper__content {
+        padding: 0;
+    }
+
+    .v-stepper, .v-stepper__items, .v-stepper__content, .v-stepper__wrapper {
+        height: 100%;
+    }
+
+    // splitpanes
+
+    .splitpanes.default-theme {
+        .splitpanes__pane {
+            overflow: auto;
+
+            ::-webkit-scrollbar {
+                display: none;
+            }
+        }
+    }
+
+    .theme--light {
+        .splitpanes.default-theme {
+            .splitpanes__splitter {
+                background-color: var(--v-controls-base);
+
+                &::before, &::after {
+                    background-color: var(--v-controls-darken2);
+                }
+            }
+        }
+    }
+
+    .theme--dark {
+        .splitpanes.default-theme {
+            .splitpanes__pane {
+                background-color: unset;
+            }
+
+            .splitpanes__splitter {
+                background-color: var(--v-controls-base);
+
+                border-color: transparent;
+
+                &::before, &::after {
+                    background-color: var(--v-controls-darken4);
+                }
+            }
+        }
+    }
+}
+
