Exibir preview de body JSON

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -56,6 +56,7 @@ html {
         .splitpanes__pane {
             overflow: auto;
             position: relative;
+            border: solid 1px var(--v-controls-darken1);
 
             ::-webkit-scrollbar {
                 width: 10px;
@@ -95,7 +96,7 @@ html {
             .splitpanes__splitter {
                 background-color: var(--v-controls-base);
 
-                border-color: transparent;
+                border-color: var(--v-controls-darken1);
 
                 &::before, &::after {
                     background-color: var(--v-controls-darken4);
