Separar e formatar os parâmetros de requisições GET

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -8,6 +8,10 @@ html {
         user-select: none;
     }
 
+    .pointer {
+        cursor: pointer;
+    }
+
     // stepper
 
     $header-height: 40px;
