--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -89,26 +89,24 @@ html {
 
     // splitpanes
 
-    .splitpanes.default-theme {
-        .splitpanes__pane {
-            overflow: auto;
-            position: relative;
-            border: solid 1px var(--v-controls-darken1);
+    .splitpanes.default-theme .splitpanes__pane, .scrollable {
+        overflow: auto;
+        position: relative;
+        border: solid 1px var(--v-controls-darken1);
 
-            ::-webkit-scrollbar {
-                width: 10px;
-                height: 10px;
-            }
+        ::-webkit-scrollbar {
+            width: 10px;
+            height: 10px;
+        }
 
-            ::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
-                background-color: var(--v-controls-darken1);
-            }
+        ::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+            background-color: var(--v-controls-darken1);
+        }
 
-            ::-webkit-scrollbar-thumb {
-                border-radius: 10px;
-                background-color: var(--v-controls-darken2);
-                border: solid 2px var(--v-controls-darken1);
-            }
+        ::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            background-color: var(--v-controls-darken2);
+            border: solid 2px var(--v-controls-darken1);
         }
     }
 
@@ -150,6 +148,22 @@ html {
 
         &:before, &:after {
             content: unset;
+        }
+    }
+
+    .spin {
+        animation-name: spin;
+        animation-duration: 2000ms;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+    }
+
+    @keyframes spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
         }
     }
 }
