Improvements to device selector

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -38,6 +38,8 @@ html {
 
     .v-list {
         border-radius: 0;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .theme--dark .v-list {
