Auto device detection in Electron using UDP datagrams (#17)

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -38,6 +38,8 @@ html {
 
     .v-list {
         border-radius: 0;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .theme--dark .v-list {
@@ -170,6 +172,15 @@ html {
         to {
             transform: rotate(360deg);
         }
+    }
+
+    .badge {
+        font-size: 9px;
+        border-radius: 8px;
+        line-height: 16px;
+        min-width: 16px;
+        background-color: #aaaaaa88;
+        padding: 0 2px;
     }
 }
 
